--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,12 +1,13 @@
 {
   "dependencies": {
     "com.google.xr.cardboard": "https://github.com/googlevr/cardboard-xr-plugin.git",
-    "com.unity.collab-proxy": "2.0.0",
+    "com.unity.collab-proxy": "2.0.1",
     "com.unity.feature.development": "1.0.1",
     "com.unity.feature.vr": "1.0.0",
     "com.unity.learn.iet-framework": "3.1.3",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.2",
+    "com.unity.toolchain.macos-x86_64-linux-x86_64": "2.0.4",
     "com.unity.visualscripting": "1.8.0",
     "com.unity.xr.arkit": "5.0.3",
     "com.unity.xr.management": "4.2.0",
